// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`push-handler creates an issue 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue and assigns the configured user 1`] = `
Object {
  "assignee": "matchai",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been automagically assigned to @matchai.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue and assigns the configured users 1`] = `
Object {
  "assignees": Array [
    "JasonEtco",
    "matchai",
    "defunkt",
  ],
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been automagically assigned to @JasonEtco, @matchai and @defunkt.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue and respects GHE_HOST 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://fakegittillyoumakegit.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue if the search does not have an issue with the correct title 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue with a body line 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "Don&#x27;t forget about this body text!

---

https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue with a body line with one body keyword 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "Don&#x27;t forget about this body text!

---

https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue with a custom keyword config 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`pizza\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue with a truncated title 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "This is a really, really, really, really, really, really, really, really, really...",
}
`;

exports[`push-handler creates an issue with an @todo comment 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates an issue without assigning anyone 1`] = `
Object {
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler creates many (5) issues 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 1",
}
`;

exports[`push-handler creates many (5) issues 2`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 2",
}
`;

exports[`push-handler creates many (5) issues 3`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 3",
}
`;

exports[`push-handler creates many (5) issues 4`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 4",
}
`;

exports[`push-handler creates many (5) issues 5`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 5",
}
`;

exports[`push-handler cuts the blobLines 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "Don&#x27;t forget about this body text!

---

https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L12

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler does not create the same issue twice in the same run 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler does not show the blob if blobLines is false 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`push-handler reopens a closed issue 1`] = `
Object {
  "state": "open",
}
`;

exports[`push-handler reopens a closed issue 2`] = `
Object {
  "body": "This issue has been reopened because the **\`TODO\`** comment still exists in [**.travis.yml**](https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml), as of e06c237a0c041f5a0a61f1c361f7a1d6f3d669af.

---

###### If this was not intentional, just remove the comment from your code. You can also set the [\`reopenClosed\`](https://github.com/JasonEtco/todo#configuring-for-your-project) config if you don't want this to happen at all anymore.",
}
`;
